objects/OAuth_Token__c.object
<CustomObject>
    <fields>
        <fullName>OAuth_Service__c</fullName>
        <label>OAuth Service</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>OAuth Tokens</relationshipLabel>
        <relationshipName>OAuth_Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OAuth_Token_Secret__c</fullName>
        <label>OAuth Token Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Token__c</fullName>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAuth_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccess</label>
        <type>Checkbox</type>
    </fields>
    <label>OAuth Token</label>
    <nameField>
        <displayFormat>OT-{00000000}</displayFormat>
        <label>OAuth Token No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAuth Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>